--- a/checkout.html
+++ b/checkout.html
@@ -56,19 +56,22 @@
         <div class="box-element">
             <a class="btn btn-outline-dark" href="{% url 'cart' %}"&#x2190>Back to Cart</a>
             <hr>
+            {% for item in items %}
             <h3>Order Summary</h3>
             <div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
-					<div style="flex:2"><p>Product 1</p></div>
-					<div style="flex:1"><p>Ksh 20.00</p></div>
-					<div style="flex:1"><p>x2</p></div>
+					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+					<div style="flex:2"><p>{{ item.product.name}}</p></div>
+					<div style="flex:1"><p>Ksh {{ item.product.price }}</p></div>
+					<div style="flex:1"><p>x2{{ item.quantity }}</p></div>
 				</div>
-            <h5>Items:2</h5>
-            <h5>Total:Ksh 40</h5>
+            <h5>Items:{{ order.get_cart_items }}</h5>
+            <h5>Total:Ksh {{ order.get_cart_total|floatformat }}</h5>
         </div>
+         {% endfor %}
     </div>
 </div>
 
 {% endblock content %}
 </body>
 </html>
+
